final coomit for backend

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
-PORT = 5000
+PORT = 8000
+ATLAS_URI = "mongodb+srv://nikk6174:1234@quiz.cze3s.mongodb.net/?retryWrites=true&w=majority&appName=quiz"
